test/corpus/flags.txt
==================
Flags
==================

interface foo {
    flags permissions {
        read,
        write,
        exec,
    }
}

---

(source_file
  (interface_item
    (id)
    (body
      (flags_items
        (id)
        (body
          (fields
            (flags_field)
            (flags_field)
            (flags_field)))))))
