test/corpus/packages.txt
==================
Package Declaration
==================

package wasi:io;
package wasmi:io:hello/epic@1.0.0;
package wasmi:io:print;

---

(source_file
  (package_decl
    (decl_head
      (id)
      (id)))
  (package_decl
    (decl_head
      (id)
      (id)
      (id)
      (id)
      (version)))
  (package_decl
    (decl_head
      (id)
      (id)
      (id))))

==================
Top-level Use Item
==================

use wasi:io:print/stdout;
use wasi:io:hello/epic as cool;


---

(source_file
  (toplevel_use_item
    (use_path
      (id)
      (id)
      (id)
      (id)))
  (toplevel_use_item
    (use_path
      (id)
      (id)
      (id)
      (id))
    (id)))

==================
Nested Package Definitions
==================

package root:a;

package local:a {
    interface foo {}
}

package local:b@1.0.0 {
    interface bar {}
    world w {}
}

---

(source_file
  (package_decl
    (decl_head
      (id)
      (id)))
  (nested_package_definition
    (decl_head
      (id)
      (id))
    (interface_item
      name: (id)
      (body)))
  (nested_package_definition
    (decl_head
      (id)
      (id)
      (version))
    (interface_item
      name: (id)
      (body))
    (world_item
      name: (id)
      (body))))
